--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: Welcome to manu
 description: Todavia no defini el uso directo de esta web pero mira el pinguinito que facherito que esta.
-taglong: Jekyll theme for a beautiful online CV
-tagshort: Jekyll theme
+taglong: Todavia no defini el uso directo de esta web pero mira el pinguinito que facherito que esta.
+tagshort: 
 url: https://frosimanuel.github.io/
 baseurl: ""
 permalink: pretty
@@ -19,12 +19,12 @@ photo: /assets/jpg/photo.jpg
 # social media links
 
 social:
-  facebook: username
+  #facebook: username
   github: frosimanuel
-  instagram: username
+  #instagram: username
   linkedin: manuel-frosi
-  stackoverflow: 0000000/username
-  twitter: username
+  #stackoverflow: 0000000/username
+  #twitter: username
 
 # build settings
 
